force-app/main/default/objects/bofc__BOFCBulkLeadConversion__c/bofc__BOFCBulkLeadConversion__c.object-meta.xml
<CustomObject>
    <label>BOFCBulkLeadConversion</label>
    <nameField>
        <displayFormat>BLC-{0000}</displayFormat>
        <label>BOFCBulkLeadConversion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOFCBulkLeadConversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>