force-app/main/default/objects/bofc__BOFCBulkLeadConversion__c/fields/bofc__Account__c.field-meta.xml
<CustomField>
    <fullName>bofc__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BOFCBulkLeadConversions</relationshipLabel>
    <relationshipName>BOFCBulkLeadConversions</relationshipName>
    <type>Lookup</type>
</CustomField>