force-app/main/default/objects/bofc__BOFCBulkLeadConversion__c/fields/bofc__Contact__c.field-meta.xml
<CustomField>
    <fullName>bofc__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>BOFCBulkLeadConversions</relationshipLabel>
    <relationshipName>BOFCBulkLeadConversions</relationshipName>
    <type>Lookup</type>
</CustomField>