force-app/main/default/objects/bofc__BOFCBulkLeadConversion__c/fields/bofc__Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>