force-app/main/default/objects/bofc__BOFCBulkLeadConversion__c/fields/bofc__Do_you_want_to_create_new_Account__c.field-meta.xml
<CustomField>
    <fullName>bofc__Do_you_want_to_create_new_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you want to create new Account?</label>
    <type>Checkbox</type>
</CustomField>