force-app/main/default/objects/bofc__BOFCBulkLeadConversion__c/fields/bofc__Lead__c.field-meta.xml
<CustomField>
    <fullName>bofc__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>BOFCBulkLeadConversions</relationshipLabel>
    <relationshipName>BOFCBulkLeadConversions</relationshipName>
    <type>Lookup</type>
</CustomField>