force-app/main/default/objects/bofc__BOFCBulkLeadConversion__c/fields/bofc__Lead_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Lead_Company_Name__c</fullName>
    <formula>bofc__Lead__r.Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Company Name</label>
    <type>Text</type>
</CustomField>