force-app/main/default/objects/bofc__BOFCBulkLeadConversion__c/fields/bofc__Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Lead_Name__c</fullName>
    <formula>bofc__Lead__r.FirstName &amp; &quot; &quot; &amp;  bofc__Lead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Name</label>
    <type>Text</type>
</CustomField>