force-app/main/default/objects/bofc__BOFCBulkLeadConversion__c/fields/bofc__LeadConvertedMessage__c.field-meta.xml
<CustomField>
    <fullName>bofc__LeadConvertedMessage__c</fullName>
    <label>LeadConvertedMessage</label>
    <type>TextArea</type>
</CustomField>