force-app/main/default/objects/bofc__BOFCBulkLeadConversion__c/fields/bofc__LeadStatus__c.field-meta.xml
<CustomField>
    <fullName>bofc__LeadStatus__c</fullName>
    <label>LeadStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>