force-app/main/default/objects/bofc__BOFCBulkLeadConversion__c/fields/bofc__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>bofc__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>BOFCBulkLeadConversions</relationshipLabel>
    <relationshipName>BOFCBulkLeadConversions</relationshipName>
    <type>Lookup</type>
</CustomField>