force-app/main/default/objects/bofc__BOFCBulkLeadConversion__c/fields/bofc__Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Opportunity_Name__c</fullName>
    <label>Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>