force-app/main/default/objects/bofc__BOFCBulkLeadConversion__c/fields/bofc__User__c.field-meta.xml
<CustomField>
    <fullName>bofc__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BOFCBulkLeadConversions</relationshipName>
    <type>Lookup</type>
</CustomField>